Replaced opacity drawing with RGB scaling. Changed node grid to 5x5. Todo: Overlap prevention

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,8 @@ strong { color: #ccc; }
 p { color: #999; }
 h2 { color: #aaa; font-size: 18px; line-height: 22px; margin-top: 6px; }
 h2 small { font-size: 14px; margin-left: 12px; }
+.text-warning strong { color: #f8a416; }
+.text-warning small { color: #d89416; }
 .well { padding: 8px; background-color: #24272b; border-color: #1b1e21; }
 .progress { height: 12px; margin-bottom: 12px; margin-top: 4px; }
 .navbar { margin-bottom: 4px; border-radius: 0; }
